@@ -1,3 +1,11 @@
+2000-03-07  Jeff Hobbs  <hobbs@scriptics.com>
+
+	* tests/entry.test:
+	* generic/tkEntry.c (EntrySetValue): malloc the value when
+	validating because validation could cause the pointer to become
+	invalid.  Also fixed configure to not trigger focus-based
+	validation.  Improved use of Tcl_WrongNumArgs. [Bug: 4320]
+
 2000-03-06  Eric Melski  <ericm@scriptics.com>
 
 	* generic/tkOldConfig.c: Added check for NULL tkwin value in
